<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_weight="3.8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/loreipsum"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:text="@string/botao"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_weight="4"
        />


</LinearLayout>
